# decimal_for_cpp

./: .gitignore  CMakeLists.txt
.github/workflows/: build-test-all.yml
cmake/: decimal_for_cppConfig.cmake.in
include/: decimal.h
superbuild/: CMakeLists.txt
